--- a/inflearn-spring-security/pom.xml
+++ b/inflearn-spring-security/pom.xml
@@ -50,6 +50,13 @@
 			<scope>runtime</scope>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-test</artifactId>
+			<scope>test</scope>
+			<version>${spring-security.version}</version>
+		</dependency>
+
 
 	</dependencies>
 
