--- a/inflearn-spring-security/pom.xml
+++ b/inflearn-spring-security/pom.xml
@@ -56,9 +56,13 @@
 			<scope>test</scope>
 			<version>${spring-security.version}</version>
 		</dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-test</artifactId>
+        </dependency>
 
 
-	</dependencies>
+    </dependencies>
 
 
 
